Fixed issue with bottom navigation item spacing
Margins between items wasn't equal.

--- a/public/css/main-layout.css
+++ b/public/css/main-layout.css
@@ -20,6 +20,8 @@ nav {
 nav a {
     font-size: 1.5em;
     color: white;
+    width: 64px;
+    text-align: center;
 }
 
 nav span {
@@ -91,6 +93,7 @@ header > a > img {
         align-items: center;
         justify-content: center;
         padding: 0.75rem 3rem 0.75rem 1rem!important;
+        width: unset;
     }
 
     nav i {
